# hatch-scanpy-typeshed

./: .gitignore  .pre-commit-config.yaml  README.rst  pyproject.toml
.github/workflows/: ci.yml
src/hatch_scanpy_typeshed/: __init__.py  __main__.py  compat.py  generate.py  hooks.py  plugin.py  transform.py  warnings.py
tests/: conftest.py  test_basic.py  test_generate.py  test_plugin.py  test_transform.py
