[build-system]
requires = ["hatchling", "hatch-vcs", "hatch-docstring-description"]
build-backend = "hatchling.build"

[project]
name = "hatch-scanpy-typeshed"
dynamic = ["version", "description"]
readme = "README.rst"
requires-python = ">=3.9"
license = "GPL-3.0-or-later"
authors = [
    { name = "Philipp A.", email = "flying-sheep@web.de" },
]
# urls.Documentation = "https://github.com/flying-sheep/hatch-scanpy-typeshed#readme"
urls.Issues = "https://github.com/flying-sheep/hatch-scanpy-typeshed/issues"
urls.Source = "https://github.com/flying-sheep/hatch-scanpy-typeshed"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Framework :: Hatch",
    "Typing :: Typed",
]
dependencies = [
    "hatchling",
    "mypy",
]

[project.scripts]
scanpy-stubgen = "hatch_scanpy_typeshed.generate:main"

[project.entry-points.hatch]
scanpy-builder = "hatch_scanpy_typeshed.hooks"

[tool.hatch.version]
source = "vcs"

[tool.hatch.envs.default]
dependencies = [
  "coverage[toml]>=6.5",
  "pytest",
]
[tool.hatch.envs.default.scripts]
test = "pytest -vv {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
    "- coverage combine",
    "coverage xml",
    "coverage report",
]
cov = [
    "test-cov",
    "cov-report",
]

[[tool.hatch.envs.all.matrix]]
python = ["3.9", "3.10", "3.11", "3.12"]

[tool.pytest.ini_options]
xfail_strict = true
addopts = [
    "--import-mode=importlib",
    "--strict-markers",
]
filterwarnings = [
    "error",
]

[tool.mypy]
strict = true
ignore_missing_imports = false

[tool.ruff]
line-length = 120
select = ["ALL"]
ignore = [
    # No self types
    "ANN101", "ANN102",
    # Allow dict() syntax
    "C408",
    # Mutually exclusive checks
    "D203", "D213",
    # No authors necessary
    "TD002",
    # TODO comments are OK
    "FIX002",
    # I know how to use asserts
    "S101",
    # Ignore checks for possible passwords
    "S105", "S106", "S107",
]
allowed-confusables = ["’", "×"]

[tool.ruff.lint.pylint]
max-args = 6

[tool.ruff.isort]
known-first-party = ["hatch_scanpy_typeshed"]

[tool.ruff.per-file-ignores]
"tests/**/*" = [
    "ARG001", # fixtures can look like unused parameters
    "D103", # test functions don’t need docstrings
    "INP001", # test directories shouldn’t contain __init__.py
]

[tool.coverage.run]
source_pkgs = ["hatch_scanpy_typeshed"]
branch = true
parallel = true
data_file = ".cache/coverage"

[tool.coverage.xml]
output = ".cache/coverage.xml"

[tool.coverage.paths]
hatch_scanpy_typeshed = ["src/hatch_scanpy_typeshed"]

[tool.coverage.report]
exclude_also = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
